# raysect_mayavi

./: pyproject.toml  setup.py  visualise_cornellbox.py
demos/: cornell_box.py  logging_trajectories.py  optical_elements.py
demos/mesh_csg/: clean_csg.py  mesh_csg_examples.py  mesh_csg_examples_mayavi.py  mesh_csg_examples_pyvista.py  signed_distances.py  sphere_intersections.py
demos/mesh_csg/backups/: csg_attempt.py  identify_triangles.py  intersection_testing.py  nasty_case1.py  signed_distances.py  special_test.py  sphere_intersections.py  usefull_csg_plots.py
demos/pyvista/: cornell_scene.py
dev/: clean.sh
raycanvas/: __init__.py
raycanvas/backend/: __init__.py
raycanvas/mayavi/: mesh.py  observer.py  parse.py  ray.py  scenegraph_viewer.py  visualiser.py
raycanvas/primitives/: mesh.py  mesh_csg.pyx  source.py
raycanvas/pythreejs/: mesh.py  observer.py  parse.py  ray.py  scenegraph_viewer.py  visualiser.py
raycanvas/pyvista/: __init__.py  mesh.py  observer.py  parse.py  ray.py  scenegraph_viewer.py  visualiser.py
raysect_mayavi/: __init__.py  scenegraph_viewer.py
raysect_mayavi/mayavi/: __init__.py  mesh.py  observer.py  parse.py  ray.py  scenegraph_viewer.py  visualiser.py
raysect_mayavi/primitives/: __init__.py  mesh.py  mesh_csg.pxd  mesh_csg.pyx  mesh_tools.pyx  observer.py  parse_nodes.py  ray.py  source.py  to_mesh.py  triangle.pxd  triangle.pyx
raysect_mayavi/pythreejs/: observer.py  parse.py  render.py  visualiser.py
raysect_mayavi/pyvista/: __init__.py  mesh.py  observer.py  parse.py  ray.py  scenegraph_viewer.py  visualiser.py
(+30 files in other folders)
